--- a/css_files/main.css
+++ b/css_files/main.css
@@ -1,3 +1,48 @@
 * {
 	font-family: arial;
+	padding: 0;
+	margin: 0;
+/*	border: 1px solid red;*/
+	float: left;
 }
+
+button {
+	background: transparent;
+	cursor: pointer;
+	font-size: 15px;
+	margin: 0;
+	font-family: monospace;
+	font-weight: 600;
+/*	color: white;*/
+	border: None;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-right: 10px;
+	padding-left: 10px;
+	transition: ease 0.2s background, 
+				ease 0.2s border;
+}
+button:hover {
+	background: black;
+	color: white;
+}
+button:active {
+	background: purple;
+/*	border: 1px solid purple;*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
